# MemoryOpt-Plus

./: .gitignore  LICENSE  PROJECT_HANDOFF.md  README.md  UPDATE.md  common.sh  customize.sh  memory.sh  module.prop  pack.sh  post-fs-data.sh  service.sh  swap.ini  uninstall.sh
.github/workflows/: build.yml
memoptd/: Cargo.toml  aarch64-musl.json  armv7-musleabi.json  build.sh
memoptd/.cargo/: config.toml
memoptd/src/: config.rs  heartbeat.rs  inotify.rs  main.rs  psi.rs  sysfs.rs  zram.rs
