[package]
name = "memoptd"
version = "1.0.0"
edition = "2021"
description = "MemoryOpt Plus - High-performance memory tuning daemon"

[dependencies]
nix = { version = "0.29", features = ["signal", "poll", "time", "ioctl", "fs"] }
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
